--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,5 +1,7 @@
 ---
 layout: default
+title: Yi's Blog
+description: Technology Zealot
 ---
-{% include JB/setup %}
-{% include themes/twitter/page.html %}
+
+under construction
