--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,3 +1,9 @@
+---
+theme :
+  name : tudou
+---
+{% include JB/setup %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -12,9 +18,13 @@
     <![endif]-->
 
     <!-- Le styles -->
-    <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
-
+    <!-- <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
+    <!-- <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all"> -->
+    <link rel="stylesheet/less" type="text/css" href="{{ ASSET_PATH }}/css/less/style.less" />
+    <script type="text/javascript">
+    var less = { env: "development" };
+    </script>
+    <script type="text/javascript" src="{{ ASSET_PATH }}/js/less.js"></script>
     <!-- Le fav and touch icons -->
   <!-- Update these with your own images
     <link rel="shortcut icon" href="images/favicon.ico">
@@ -26,31 +36,23 @@
 
   <body>
 
-    <div class="navbar">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="brand" href="{{ HOME_PATH }}">Home</a>
-          <a class="brand" href="{{ HOME_PATH }}bio">Bio</a>
-          <a class="brand" href="{{ HOME_PATH }}blog">Blog</a>
-          <a class="brand" href="{{ HOME_PATH }}projects">Projects</a>
-          <a class="brand" href="{{ HOME_PATH }}contact">Contact</a>
-        </div>
-      </div>
-    </div>
-
     <div class="container">
+
+      <header>
+
+      </header>
 
       <div class="content">
         {{ content }}
       </div>
 
       <footer>
-        <p>&copy; {{ site.author.name }} 2012 
+        <p>&copy; {{ site.author.name }} 2013
         </p>
       </footer>
 
     </div> <!-- /container -->
 
-    {% include JB/analytics %}
   </body>
 </html>
+
