--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -16,7 +16,7 @@ html, body {
 }
 .container > footer p {
   text-align: center;  /*center align it with the container */
-  font-family: 'call_me_maybe';
+  /*font-family: 'call_me_maybe';*/
   font-size: 18px;
 }
 
