add portfolio main page, add skype button

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,6 +1,4 @@
 ---
-theme :
-  name : tudou
 ---
 {% include JB/setup %}
 
@@ -39,7 +37,7 @@ theme :
     <div class="container">
 
       <header>
-
+        <a href="/">Me</a> | <a href="/portfolio">Portfolio</a> | <a href="http://blog.minus1.se/">Tech Blog</a> 
       </header>
 
       <div class="content">
