--- a/assets/themes/tudou/css/less/style.less
+++ b/assets/themes/tudou/css/less/style.less
@@ -38,6 +38,35 @@ html, body {
   .box-shadow(0 1px 2px rgba(0,0,0,.15));
   .clearfix;
 
+  .project-container {
+    .clearfix;
+    border-bottom: 1px dotted @grayDark;
+    width: 100%;
+    > div {
+      float:left;
+    }
+    .img-holder {
+      width: 300px;
+      margin: 5px 10px;
+      height: 150px;
+      line-height: 150px;
+    }
+
+    .project-text {
+      width: 460px;
+      margin: 0 0 0 10px;
+
+      h3 {
+        text-align: center;
+      }
+
+      > div {
+        overflow: hidden;
+      }
+
+    }
+  }
+
   > div {
   	float: left;
   }
