--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -37,7 +37,9 @@
     <div class="container">
 
       <header>
-        <a href="/">Me</a> | <a href="/portfolio">Portfolio</a> | <a href="http://blog.minus1.se/">Tech Blog</a> 
+        <h4><a href="/">About Me</a></h4>
+        <h4><a href="/portfolio">Portfolio</a></h4>
+        <h4><a href="http://blog.minus1.se/">Tech Blog</a></h4> 
       </header>
 
       <div class="content">
