--- a/assets/themes/tudou/bootstrap/less/variables.less
+++ b/assets/themes/tudou/bootstrap/less/variables.less
@@ -39,7 +39,7 @@
 
 // Links
 // -------------------------
-@linkColor:             #cc3c10;
+@linkColor:             orange;
 @linkColorHover:        darken(@linkColor, 15%);
 
 
