--- a/assets/themes/tudou/css/less/style.less
+++ b/assets/themes/tudou/css/less/style.less
@@ -10,30 +10,43 @@
 	     url('../../font/call_me_maybe.svg#webfont') format('svg');
 }
 /* Override some defaults */
-html, body {
-  background-color: #eee;
+a:hover {
+  text-decoration: none;
 }
 
 .container {
 	width: 800px;
+
+      > header {
+        position: fixed;
+        left: 0;
+        right: 0;
+        z-index: 999;
+        text-align: center;
+        background-color: @black;
+        > h4 {
+          display: inline-block;
+          width: 100px;
+        }
+      }
+
+       > footer {
+        margin-top: 10px;
+        font-size: 12px;
+
+          p {
+          text-align: center; /* center align it with the container */
+          /*font-family: 'call_me_maybe';*/
+          /*font-size: 18px;*/
+          }
+        }
 }
-
-.container > footer {
-  margin-top: 10px;
-  font-size: 12px;
-
-  p {
-  text-align: center; /* center align it with the container */
-  /*font-family: 'call_me_maybe';*/
-  /*font-size: 18px;*/
-  }
-}
-
 /* The white background content wrapper */
 .content {
   /*background-color: #fff;*/
   /*padding: 20px;*/
   /*margin: 0 -20px;  negative indent the amount of the padding to maintain the grid system */
+  margin-top: 45px;
   .border-radius(0 0 6px 6px);
   .box-shadow(0 1px 2px rgba(0,0,0,.15));
   .clearfix;
