add resume page

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -39,7 +39,8 @@
       <header>
         <h4><a href="/">About Me</a></h4>
         <h4><a href="/portfolio">Portfolio</a></h4>
-        <h4><a href="http://blog.minus1.se/">Tech Blog</a></h4> 
+        <h4><a href="http://blog.minus1.se/">Tech Blog</a></h4>
+        <h4><a href="https://docs.google.com/document/d/1-s2dYdFqMkLcPfNyUpdqi-5yJtmuYNsld0cwmOPX530/edit?usp=sharing" target="_blank">Resume</a></h4>
       </header>
 
       <div class="content">
