--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+author: "Yi FU"
 ---
 
 <!-- Post Header -->
@@ -27,6 +28,8 @@ layout: default
 
 				{{ content }}
 
+                <div id="disqus_thread"></div>
+
                 <hr>
 
                 <ul class="pager">
@@ -48,3 +51,29 @@ layout: default
 </article>
 
 <hr>
+
+<div class="container">
+    <div class="row">
+        <div class="col-lg-3 col-lg-offset-2 col-md-3 col-md-offset-2">
+            <img src="/img/yi_profile.jpg" alt="Profile" class="img-circle profile-img img-responsive center-block">
+        </div>
+        <div class="col-lg-4 col-md-4">
+            <h2>About the author</h2>
+            <p>Web enthusiast, tech writer. currently working as lead developer at <a href="www.spartasales.com">Sparta</a>, an SASS competition platform to drive sales result to next level!</p>
+        </div>
+    </div>
+</div>
+
+<hr>
+<script type="text/javascript">
+    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+    var disqus_shortname = 'minus1'; // required: replace example with your forum shortname
+
+    /* * * DON'T EDIT BELOW THIS LINE * * */
+    (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
