--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -56,6 +56,7 @@ author: "Yi FU"
     <div class="row">
         <div class="col-lg-3 col-lg-offset-2 col-md-3 col-md-offset-2">
             <img src="/img/yi_profile.jpg" alt="Profile" class="img-circle profile-img img-responsive center-block">
+            <h3 class="text-center">Yi FU</h3>
         </div>
         <div class="col-lg-4 col-md-4">
             <h2>About the author</h2>
