--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="{{ site.description }}">
+    <meta name="keywords" content="{{ page.keywords | site.keywords }}">
+    <meta name="description" content="{{ page.description | site.description }}">
+    <meta name="author" content="Yi FU">
 
     <title>{% if page.title %}{{ page.title }} - {{ site.title }}{% else %}{{ site.title }}{% endif %}</title>
 
