update company url

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -60,7 +60,7 @@ author: "Yi FU"
         </div>
         <div class="col-lg-4 col-md-4">
             <h2>About the author</h2>
-            <p>Web enthusiast, tech writer. currently working as lead developer at <a href="www.spartasales.com">Sparta</a>, an SASS competition platform to drive sales result to next level!</p>
+            <p>Web enthusiast, tech writer. currently working as lead developer at <a href="https://www.spartasales.com">Sparta</a>, an SASS competition platform to drive sales result to next level!</p>
         </div>
     </div>
 </div>
